--- a/style.css
+++ b/style.css
@@ -3,3 +3,10 @@ html, body {
     padding: 0;
     background-color: rgb(53, 53, 53);
 }
+
+.grid {
+    display: grid;
+    grid-template-rows: repeat(auto-fit, 1fr);
+    grid-auto-flow: column;
+    color: white;
+}
