--- a/style.css
+++ b/style.css
@@ -4,9 +4,24 @@ html, body {
     background-color: rgb(53, 53, 53);
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+}
+
 .grid {
     display: grid;
     grid-template-rows: repeat(auto-fit, 1fr);
     grid-auto-flow: column;
     color: white;
+}
+
+#book {
+    font-size: 1.5vw;
+    width: 10vw;
+    height: 5vh;
+    border: 1px solid white;
+    border-radius: 15px;
 }
