--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
 .grid {
     display: grid;
     grid-template-rows: repeat(auto-fit, 1fr);
+    grid-template-columns: repeat(auto-fit, 1fr);
     grid-auto-flow: column;
-    color: white;
 }
 
 #book {
